public/styles/app.css
@import "config.css";
@import "bpg-algeti.css";
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
/* 'Roboto', sans-serif; */
.wrapper {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: 100dvh;
}

body {
    font-family: inherit;
}


body[data-languge="ka"]{
    font-family: 'algeti', serif;
}

body[data-languge="en"]{
    font-family:'Roboto', sans-serif;
}

 
.navbar-toggler{
    border: 1px solid var(--gold);
}

/* Swiper Slider */
.partners {
  padding-block: 25px;
  }
 
  .swiper-pagination {
  --swiper-pagination-bottom: -10px;
  }

.swiper-pagination-bullet{
    --swiper-pagination-bullet-width: 12px;
    --swiper-pagination-bullet-height: 12px;
      margin: 5px 6px !important;
}

.swiper-pagination-bullet-active{
    background-color: var(--gold);
}

.language-switcher{
    padding: 7px;
    background-color: transparent;
    border-radius: 5px;
    transition: background-color 0.75s, color 0.75s;
    font-size: 0.75rem;
}

.language-switcher:hover{
    background-color: var(--black);
    color: var(--gold);
}

.active-language{
    background-color: var(--black);
    color: var(--gold);
}
.view-more{
    background-color:  hsla(var(--black-hue), var(--black-saturation), var(--back-lightness), var(--back-alfa));
    color: hsla(var(--gold-hue), var(--gold-saturation), var(--gold-lightness), var(--gold-alfa));

}

.view-more:hover{
    background-color:  hsla(var(--gold-hue), var(--gold-saturation), var(--gold-lightness), var(--gold-alfa));
    color:  hsla(var(--black-hue), var(--black-saturation), var(--back-lightness), var(--back-alfa));
}

.card-article{
    border: 1px solid  hsla(var(--gold-hue), var(--gold-saturation), var(--gold-lightness), var(--gold-alfa));
}
.card-partner{
    border: 1px solid  hsla(var(--gold-hue), var(--gold-saturation), var(--gold-lightness), var(--gold-alfa));
    height: 100%;
}

/* ========================== */
/* Show-program.blade.php */

.view-more--secondary{
    background-color:  hsla(var(--black-hue), var(--black-saturation), var(--back-lightness), var(--back-alfa));
    color: hsla(var(--gold-hue), var(--gold-saturation), var(--gold-lightness), var(--gold-alfa));
}

.view-more--secondary:hover {
  background-color: hsla(var(--black-hue), var(--black-saturation), var(--back-lightness), 0.85);
  color: hsla(var(--gold-hue), var(--gold-saturation), var(--gold-lightness), 0.9);
}


/* single-item-component */
.publication-img-wrapper {
	position: relative;
	cursor: pointer;
}

.publication-img-wrapper::after {
	content: attr(data-pdfMarker);
	position: absolute;
    inset: 0;
	background: rgba(0, 0, 0, 0.5);
	color: #fff;
	font-weight: bold;
	font-size: 1.1rem;
	display: flex;
	justify-content: center;
	align-items: center;
	opacity: 1;
	transition: opacity 0.3s ease;
	border-radius: 0.5rem;
    pointer-events: none;
}

.publication-img-wrapper:hover::after {
	opacity: 0;
}


/* Reset Admin Dashboard Page */
button.black-bg.gold-text:hover {
    background-color: hsla(var(--black-hue), var(--black-saturation), var(--back-lightness), 0.7);
    color: var(--gold);
}

